hphp/test/zend/bad/ext/spl/tests/bug64782.php
<?php

var_dump(new SplFileObject(__FILE__, "r", false, null));

?>